# fapiis-service

./: .gitignore  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  heroku.yml  main.py  pyproject.toml  server.py
