[tool.poetry]
name = "fapiis-service"
version = "0.1.0"
description = ""
authors = ["Dave Zvenyach <dave@hangar.is>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
beautifulsoup4 = "^4.8"
bottle = "^0.12.17"
waitress = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
